tests/ui/borrowck/alias-liveness/gat-outlives-implied.polonius_alpha.stderr
error[E0506]: cannot assign to `cluster` because it is borrowed
  --> $DIR/gat-outlives-implied.rs:20:9
   |
LL |         let changes = self.changes(&cluster);
   |                                    -------- `cluster` is borrowed here
LL |         cluster = 1;
   |         ^^^^^^^^^^^ `cluster` is assigned to here but it was already borrowed
LL |         let _ = changes;
   |                 ------- borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
